# connui-cellular

./: .gitignore  AUTHORS  Makefile.am  configure.ac  connui-cellular.pc.in
conndlgs/: Makefile.am  cell-dialog-error-note.c  cell-dialog-oma-cp-ui.c  cell-dialog-roaming.c  pin_code_correct.c  startup-pin-query.c
cpa/: Makefile.am  cellular-settings-abook.c  cellular-settings-abook.h  cellular-settings-call.c  cellular-settings-call.h  cellular-settings-modem.c  cellular-settings-modem.h  cellular-settings-net.c  cellular-settings-net.h  cellular-settings-sim.c  cellular-settings-sim.h  cellular-settings-utils.c  cellular-settings-utils.h  cellular-settings.c  cellular-settings.h  cellularsettings.c  connui-cellular-settings.desktop  data-counter.c  data-counter.h  net-selection.c  net-selection.h  operator-name-cbs-cpa.c  operator-name-cbs-cpa.desktop
data/: Makefile.am  connui-cellular.schemas  org.ofono.ConnectionManager.xml  org.ofono.NetworkRegistration.xml  org.ofono.SupplementaryServices.xml  org.ofono.VoiceCallManager.xml
debian/: changelog  connui-cellular-settings.install  connui-conndlgs-cellular.b_start_matchbox  connui-conndlgs-cellular.install  connui-conndlgs-cellular.launcher  connui-conndlgs-cellular.stop_matchbox  connui-conndlgs-cellular.xsession  connui-home-cellular.install  connui-iapsettings-gprs.install  connui-statusbar-cellular.install  control  libconnui-cellular-dev.install  libconnui-cellular.install  rules
home-item/: Makefile.am  operator-name-cbs-home-item.c  operator-name-cbs-home-item.h  smsutil.c
include/: connui-cellular-code-ui.h  connui-cellular-connmgr.h  connui-cellular-modem.h  connui-cellular-net.h  connui-cellular-sim.h  connui-cellular-sups.h  connui-cellular.h  context.h  ofono-context.h
lib/: Makefile.am  call.c  code-ui.c  connmgr.c  connmgr.h  connui-cell-marshal.list  connui-cell-note.c  connui-cell-note.h  context.c  context.h  datacounter.c  emergency.c  modem.c  modem.h  net-status.c  net.c  net.h  network.c  ofono-context.h  ofono.c  ofono.h  security_code.c  service-call.c  service-call.h  sim-status.c  sim.c  sim.h  ssc.c  sups.c  sups.h
status-menu-item/: Makefile.am  connui-cellular.desktop  status-item.c
wizard/: Makefile.am  gprs.c
